# pipeline-tools

./: .clang-format  .gitignore  .gitlab-ci.yml  AdditionModule_8hpp.html  AdditionModule_8hpp.js  AdditionModule_8hpp__dep__incl.map  AdditionModule_8hpp__dep__incl.md5  AdditionModule_8hpp__incl.map  AdditionModule_8hpp__incl.md5  AdditionModule_8hpp_source.html  Aggregator_8hpp.html  Aggregator_8hpp.js  Aggregator_8hpp__dep__incl.map  Aggregator_8hpp__dep__incl.md5  Aggregator_8hpp__incl.map  Aggregator_8hpp__incl.md5  Aggregator_8hpp_source.html  BM__aggregator_8cpp.html  BM__aggregator_8cpp.js  BM__aggregator_8cpp__incl.map  BM__aggregator_8cpp__incl.md5  BM__mempool_8cpp.html  BM__mempool_8cpp.js  BM__mempool_8cpp__incl.map  BM__mempool_8cpp__incl.md5  BM__module_8cpp.html  BM__module_8cpp.js  BM__module_8cpp__incl.map  BM__module_8cpp__incl.md5  BM__pipeline_8cpp.html  BM__pipeline_8cpp.js  BM__pipeline_8cpp__incl.map  BM__pipeline_8cpp__incl.md5  BM__shared__buffer_8cpp.html  BM__shared__buffer_8cpp.js  BM__shared__buffer_8cpp__incl.map  BM__shared__buffer_8cpp__incl.md5  BM__sink_8cpp.html  BM__sink_8cpp.js  BM__sink_8cpp__incl.map  (+1096 more)
core/: CMakeLists.txt  core-ci.yml
core/src/config/: config.h
core/src/flow/: Flow.hpp  Mission.cpp  Mission.hpp  Pipeline.hpp  Producer.hpp  ProductionPolicy.cpp  ProductionPolicy.h  README.md
core/src/flow/blocks/: Aggregator.hpp  Module.hpp  Sink.hpp  Source.hpp
core/src/flow/exceptions/: unknown_flow_object.cpp  unknown_flow_object.h  unordered_sources.cpp  unordered_sources.h
core/src/modules/io/: ConstantSource.hpp  PrintSink.hpp
core/src/modules/io/queue/: QueueSink.hpp  QueueSource.hpp
core/src/modules/math/: AdditionModule.hpp  SumAggregator.hpp  concepts.h
core/src/pt/core/config/: convert.h
core/src/pt/core/flow/: Pipeline.hpp  Producer.hpp
core/src/pt/core/utils/: Singleton.hpp  utils.cpp  utils.h
core/src/utils/: misc_utils.cpp  misc_utils.h  string_utils.cpp  string_utils.h
core/src/utils/config/: convert.h  env.h
core/src/utils/exceptions/: bad_any_cast_with_info.hpp
core/src/utils/ipc/rmq/: Concepts.h  Consumer.h  Consumer.tpp  MQEntity.cpp  MQEntity.h  Publisher.h  Publisher.tpp  README.md
core/src/utils/logging/: logger.cpp  logger.h
core/src/utils/memory/: README.md  concepts.h  memory_location.h
core/src/utils/memory/mempool/: MemPool.hpp
core/src/utils/memory/smart_buffers/: buffer_base.hpp  released_buffer.hpp  shared_buffer.hpp  unique_buffer.hpp
core/src/utils/queues/: BlockingQueue.hpp  IQueue.hpp  LockFreeQueue.hpp  MoodycamelQueue.hpp  QueueFactory.hpp  StdQueue.hpp
core/src/utils/queues/moodycamel/: atomicops.h  readerwriterqueue.h
core/src/utils/singleton/: Singleton.h  Singleton.tpp
core/src/utils/threads/: CPUManager.cpp  CPUManager.h  ThreadPolicy.h  Worker.cpp  Worker.h
core/test/: CMakeLists.txt  FunctionTest.hpp
core/test/config/: config_tests.cpp
core/test/flow/: flow_test_utils.hpp  mimo_tests.cpp  mission_tests.cpp  move_copy_dtor_tests.cpp
core/test/flow/blocks/: BM_aggregator.cpp  BM_module.cpp  BM_pipeline.cpp  BM_sink.cpp  BM_source.cpp  aggregator_tests.cpp  module_tests.cpp  pipeline_tests.cpp  sink_tests.cpp  source_tests.cpp
core/test/utils/: utility_tests.cpp
core/test/utils/config/: config_tests.cpp
core/test/utils/exception/: custom_exception_tests.cpp
core/test/utils/memory/: MockDeleter.hpp
core/test/utils/memory/buffers/: BM_shared_buffer.cpp  BM_unique_buffer.cpp  shared_buffer_tests.cpp  unique_buffer_tests.cpp
core/test/utils/memory/mempool/: BM_mempool.cpp  mempool_tests.cpp
missions/example/: CMakeLists.txt
missions/example/src/: register_routes.cpp
pipeline_tools/: CMakeLists.txt
pipeline_tools/src/: concepts.h  lib.cpp
pipeline_tools/src/config/: get_env.h
pipeline_tools/src/flow/: Block.hpp  Flow.hpp  FlowWithOutput.hpp  Mission.cpp  Mission.hpp  NodeRED.hpp  NodeREDNode.hpp  Pipeline.hpp  PipelineProvider.h  Producer.hpp  concepts.h
pipeline_tools/src/flow/blocks/: Aggregator.hpp  Module.hpp  Pipeline.hpp  Sink.hpp  Source.hpp
pipeline_tools/src/flow/exceptions/: unknown_flow_object_type.cpp  unknown_flow_object_type.h
pipeline_tools/src/missions/: ExampleMissions.h
pipeline_tools/src/modules/: AccumulatorModule.hpp  AddModule.cpp  AddModule.h  NumberSource.cpp  NumberSource.h  PrintSink.h  PrintSink.hpp  QueueSink.hpp  QueueSource.hpp  SumAggregator.hpp
pipeline_tools/src/modules/io/: ConstantSource.hpp
pipeline_tools/src/modules/io/queue/: QueueSink.hpp  QueueSource.hpp
pipeline_tools/src/modules/math/: AdditionModule.hpp  SumAggregator.hpp
pipeline_tools/src/providers/: FileProvider.h
pipeline_tools/src/util/queues/: BlockingQueue.hpp  IQueue.hpp  LockFreeQueue.hpp  Queue.hpp
pipeline_tools/src/utils/: HTTPServer.hpp  Singleton.hpp  utils.cpp  utils.h
pipeline_tools/src/utils/exceptions/: bad_any_cast_with_info.hpp  unknown_flow_object_type.cpp
pipeline_tools/src/utils/queues/: BlockingQueue.hpp  IQueue.hpp  LockFreeQueue.hpp  MoodycamelQueue.hpp  Queue.hpp  QueueFactory.hpp  QueueType.h  StdQueue.hpp
pipeline_tools/src/utils/threads/: CPUManager.cpp  CPUManager.h  ThreadPolicy.h  Worker.cpp  Worker.h
pipeline_tools/test/: CMakeLists.txt  main_BM.cpp
pipeline_tools/test/flow/: FlowTestObjects.hpp  flow_test_utils.hpp  mimo_tests.cpp  mission_tests.cpp  move_copy_dtor_tests.cpp  noderd_tests.cpp
pipeline_tools/test/flow/blocks/: BM_aggregator.cpp  BM_module.cpp  BM_pipeline.cpp  BM_sink.cpp  BM_source.cpp  TestBlocks.hpp  aggregator_tests.cpp  mimo_tests.cpp  module_tests.cpp  pipeline_tests.cpp  sink_tests.cpp  source_tests.cpp
pipeline_tools/test/testing_utils/: FunctionTest.h
pipeline_tools/test/utils/: utility_tests.cpp
pipeline_tools/test/utils/exception/: custom_exception_tests.cpp
pipeline_tools/test/utils/queues/: Queue_tests.cpp
server/: CMakeLists.txt
server/src/server/: routes.cpp  routes.hpp
server/src/server/swagger/: EndpointMetadata.cpp  EndpointMetadata.h  SwaggerGenerator.cpp  SwaggerGenerator.h
server/src/server/utils/: web_utils.h
(+187 files in other folders)
